# area

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
area/: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
area/config/: settings.py  urls.py
area/masters/: models.py
